--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/unzipper": "^0.10.9",
+    "axios": "^1.7.2",
+    "jszip": "^3.10.1",
     "next": "14.2.3",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
     "react-jinke-music-player": "^4.24.2",
     "react-material-music-player": "^1.2.3",
-    "sass": "^1.77.2"
+    "sass": "^1.77.2",
+    "unzipper": "^0.11.6"
   },
   "devDependencies": {
     "@types/node": "^20",
