--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Vultures App",
-  "version": "0.0.1",
+  "name": "Vultures-App",
+  "version": "1",
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
@@ -20,7 +20,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-material-music-player": "^1.2.3",
-    "sass": "^1.77.2"
+    "sass": "^1.77.2",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/node": "^20",
